@@ -253,6 +253,7 @@ fi
 %{_mandir}/man3/libipmidetect.3*
 %{_mandir}/man8/ipmidetect.8*
 %{_mandir}/man5/ipmidetect.conf.5*
+%{_mandir}/man7/freeipmi.7*
 %dir %{_localstatedir}/cache/ipmimonitoringsdrcache
 
 %files devel
@@ -310,6 +311,9 @@ fi
 %{_mandir}/man8/ipmidetectd.8*
 
 %changelog
+* Mon Apr 7 2008 Albert Chu <chu11@llnl.gov> 0.6.0
+- Add freeipmi.7 manpage.
+
 * Wed Apr 2 2008 Albert Chu <chu11@llnl.gov> 0.6.0
 - Add freeipmi-bugs-and-workarounds.txt.
 
